1.7.1 refactoring + client cache + logs